<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AlertMe</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="splash_msg">AlertMe</string>
    <string name="cmpy_name">Flavor Tech.</string>
    <string name="app_version">1.0.0</string>

    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_setting">Setting</string>
    <string name="title_activity_feedback">Feedback</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="title_activity_stop">StopActivity</string>

    <!-- Other string resources also defined in this file… -->
    <string name="feedbacktype1">Praise</string>
    <string name="feedbacktype2">Gripe</string>
    <string name="feedbacktype3">Suggestion</string>
    <string name="feedbacktype4">Bug</string>
    <string name="feedbacktitle">Send Your Feedback/Query</string>
    <string name="feedbackname">Your Name</string>
    <string name="feedbackemail">Your Mail id</string>
    <string name="feedbacktype">Feedback/Query Type</string>
    <string name="feedbackbody">Message</string>
    <string name="feedbackresponse">Feed backResponse</string>
    <string name="feedbackbutton">Mail Us</string>

    <!-- dashboard titles  -->
    <string name="profiletitle">Profile</string>
    <string name="settingtitle">Setting</string>
    <string name="feedbacltitle">Feedback</string>
    <string name="starttitle">Start/Pause Trip</string>
    <string name="triphistory">Trip History</string>
    <string name="dashboardtitile">Dashboard</string>

    <!-- Button titles -->
    <string name="updatebtntitle">Update</string>
    <string name="savebtntitle">Save</string>

    <string name="google_maps_key">AIzaSyADECSFOXlHB2IejPLBP4GCBGvlo9ULmE8</string>
    <integer name="google_play_services_version">8115000</integer>
</resources>